src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/CD4AC3007.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram CD4AC3007 {
	interface A;
}