src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/C4A66.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram C4A66 {
	
	interface A {
		String a;
	}
	interface B {
		int a;
	}
	
	class T;
	interface C {
		T t;
	}
}
